//grpc_tools_node_protoc --js_out=import_style=commonjs,binary:. --grpc_out=grpc_js:. proto/model.proto
syntax = "proto3";

package chat;
option go_package = "./chat";

message Message {
    int32 chatID = 1;
    string messageType = 2;   
    string text = 3;
    repeated string attachesUrls = 4;
    int32  homeworkID = 5;          
}

message FileUploadRequest {
    string mimetype = 1;
    string fileLink = 2;
}
message FileUploadResponse {
    string internalFileUrl = 2;
}

message HomeworkRequest {
	int32 chatID = 1;
}

message Homework {
    int32 homeworkID = 1;
	string solutionFileUrl = 2;
	string title = 3;
}

message HomeworkResponse {
  repeated Homework homeworks = 1;
}

service BotChat {
rpc StartChatTG(stream Message) returns (stream Message);
rpc UploadFile(FileUploadRequest) returns (FileUploadResponse);
}
